[gd_scene load_steps=2 format=2]

[ext_resource path="res://editor/Info.gd" type="Script" id=1]

[node name="Info" type="Node2D"]
script = ExtResource( 1 )

[node name="x_label" type="Label" parent="."]
margin_left = 110.0
margin_top = 8.0
margin_right = 124.0
margin_bottom = 22.0
text = "x:"

[node name="y_label" type="Label" parent="."]
margin_left = 214.0
margin_top = 7.0
margin_right = 228.0
margin_bottom = 21.0
text = "y:"

[node name="widht_label" type="Label" parent="."]
margin_left = 90.0
margin_top = 37.0709
margin_right = 129.0
margin_bottom = 51.0709
text = "width:"

[node name="height_label" type="Label" parent="."]
margin_left = 188.36
margin_top = 37.0709
margin_right = 232.36
margin_bottom = 51.0709
text = "height:"

[node name="exists_label" type="Label" parent="."]
margin_top = 37.0709
margin_right = 44.0
margin_bottom = 51.0709
text = "exists"

[node name="x_value" type="LineEdit" parent="."]
margin_left = 129.0
margin_right = 187.0
margin_bottom = 29.0
text = "0"

[node name="y_value" type="LineEdit" parent="."]
margin_left = 232.36
margin_right = 290.36
margin_bottom = 29.0
text = "0"

[node name="width_value" type="LineEdit" parent="."]
margin_left = 129.0
margin_top = 33.5354
margin_right = 187.0
margin_bottom = 62.5354
text = "100"

[node name="height_value" type="LineEdit" parent="."]
margin_left = 232.36
margin_top = 33.5354
margin_right = 290.36
margin_bottom = 62.5354
text = "100"

[node name="exists_value" type="CheckBox" parent="."]
margin_left = 36.0
margin_top = 32.0
margin_right = 60.0
margin_bottom = 56.0
pressed = true
